# platzky-msgbar

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml  todo.yml
platzky_msgbar/: __init__.py  config.py  entrypoint.py
tests/e2e_tests/: cypress.config.js  e2e_app.py  e2e_test_config.yml  e2e_test_data.json  package-lock.json  package.json
tests/e2e_tests/cypress/e2e/: close_msgbar_spec.cy.js
tests/unit_tests/: test_msgbar.py
