[tool.poetry]
name = "platzky_msgbar"
version = "0.1.0"
description = "A Platzky plugin to show a message bar above the page"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.3"
pydantic-extra-types = "^2.10.1"
gql = "^3.5.0"
markdown = "^3.10"
bleach = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
ruff = "^0.8.3"
pyright = "^1.1.390"
coverage = "^7.6.9"
platzky = "^0.2.13"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
build_command = "poetry build"
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"